refactor(intelli-ai-repairer-main): 重构问题模型与提供者类结构并优化 UI 交互
- 重构 RepairerProblem 类为 final class 并重命名访问器方法, 提升语义清晰度与 API 一致性
- 将 RepairerProblemsProvider 从 record 改为 final class, 移除冗余 project()方法并新增 getProject() 以符合接口规范
- 优化 ImportStaticReportAction 行为: 支持从上下文选中文件导入, 新增工具窗口激活与修复器标签页切换逻辑
- 修复 AICheckstyleFix 中空值判断逻辑, 移除冗余 null 检查并使用 List.getFirst() 替代索引访问
- 更新插件菜单配置, 将导入报告动作添加至项目树与编辑器右键菜单, 提升用户操作便捷性